--- a/app/html/product.html
+++ b/app/html/product.html
@@ -38,46 +38,87 @@
         </ul>
     </div>
     <div class="innerpageContainer">
-        <div class="aboutImg"></div>
-        <div class="about_c">
-            <div class="c_name">关于我们</div>
-            <div class="c_context">
-                <p>上海恃有信息科技有限公司是国家文化部动漫集团总公司旗下动漫知识产权交易平台的唯一指定IT供应商，同时也是计算机软件研发、应用、集成的智能密集型移动学习平台的运营商。以垂直行业为突破口，专业从事各行业包括电子商务交易平台、企业内部运行规范，生态圈建设，企业文化塑造在内的互联网以及新型渠道和技术的构建和运营，促进行业的规范和快速发展。目前已取得了非常显著的成绩，拥有一批如东亚银行、中信银行等垂直行业的客户群。
-                <p>公司总部坐落在上海，拥有一支技术过硬、业务专精的技术开发和实施运营团队，是国内该业态中极具影响力的新企业。
-                <p>企业文化
-                <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;上海恃有信息科技有限公司从成立以来一直坚持以客户为中心，服务于客户的原则，以打造精品团队，创造精品产品，提供精品服务为发展目标。
-                <p>企业团队
-                <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;公司的资深管理团队成员曾在公司中担任核心技术的研发或管理等重要职位，如资深技术总监、资深项目总监等，拥有丰富的管理和技术经验。“恃有模式”是我们将本着“不拘一格，能力为王”的理念，为每个团队成员提供可以任意驰骋的工作领域和创造机遇；只要你足够优秀就会在这里获得工作的乐趣、成长的喜悦、成功的招手、同事间的友爱。
-            </div>
+        <div class="productImg"></div>
+        <div class="sec_nav">
+            <ul class="sec_menu">
+                <li><a class="active">任务管理</a></li>
+                <li><a>项目管理</a></li>
+                <li><a>通讯录</a></li>
+                <li><a>绩效管理</a></li>
+                <li><a>审批管理</a></li>
+                <li><a>CRM</a></li>
+                <li><a>考勤管理</a></li>
+                <li><a>学习管理</a></li>
+            </ul>
         </div>
-        <div class="about_c">
-            <div class="c_name">主营业务</div>
-            <div class="c_context">
-                <p>国家文化部动漫集团总公司旗下动漫知识产权交易平台的唯一指定IT供应商
-                <p>公司本着充分了解客户在电子商务交易平台、企业内部运行规范，生态圈建设，企业文化塑造的软件规范和解决方案，以及应对技术支持和维护时所面临的挑战和压力。
-                <p>在线培训服务的运营商
-                <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;面向各种类型企业开展在线培训的租用以及买断服务。整合培训行业的各项资源，实现PC、微信、app同步更新，将平台、培训体系、软件系统打包租用。凭借过硬的产品技术和优质的服务赢得了客户的认可，如东亚银行、中信银行、展讯、证大复地等20多家金融机构均是我们的标杆客户。
-            </div>
-        </div>
-        <div class="about_c">
-            <div class="c_name">团队介绍</div>
-            <div class="c_context">
-                <p>公司的资深管理团队成员曾在公司中担任核心技术的研发或管理等重要职位，如资深技术总监、资深项目总监等，拥有丰富的管理和技术经验。“恃有模式”是我们将本着“不拘一格，能力为王”的理念，为每个团队成员提供可以任意驰骋的工作领域和创造机遇；只要你足够优秀就会在这里获得工作的乐趣、成长的喜悦、成功的招手、同事间的友爱。
-            </div>
-        </div>
-        <div class="about_c noLine">
-            <div class="c_name">联系我们</div>
-            <div class="c_context">
-                <div class="c_left">
-                    <p><i class="iconfont icon-dianhua"></i>021-55215180(周一至周五9：00-17：30)</p>
-                    <p><i class="iconfont icon-youxiang"></i>service@qili.com(发送意见反馈)</p>
-                    <p><i class="iconfont icon-dizhi"></i>上海市虹口区广粤路439弄3号楼502</p>
-                    <p><i class="iconfont icon-weixin"></i></p>
+        <div>
+            <div class="line_model">
+                <div class="line_h">
+                    <img src="../static/images/product/task/1.png">
                 </div>
-                <div class="c_map">
-                    <div id="map" style="height: 300px;width: 300px;">
-
+                <div class="line_h">
+                    <div class="line_text">
+                        <p class="l_title">任务管理<em>高效易用的任务协作工具.</em></p>
+                        <p class="l_des">多人流转协作、自动记录，极大提升任务协作效率</p>
+                        <p class="l_info">项目统筹管理繁杂事物，工作清晰有条理；线上分配、管理任务，明确区分任务优先级、状态；知识、文档、经验及时上传，形成企业有效积累。</p>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="hasBg">
+            <div class="line_model">
+                <div class="line_h">
+                    <div class="right_text">
+                        <p>任务工作权责清晰项目归类管理<br>所有任务进度全局掌控</p>
+                        <div class="icons">
+                            <div class="r_i">
+                                <i class="iconfont icon-xiangmuguilei"></i>
+                                <p>项目归类</p>
+                            </div>
+                            <div class="r_i">
+                                <i class="iconfont icon-quanze"></i>
+                                <p>权责明确</p>
+                            </div>
+                            <div class="r_i">
+                                <i class="iconfont icon-jiankong"></i>
+                                <p>精准监控</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="line_h">
+                    <img src="../static/images/product/task/2.png">
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="line_model">
+                <div class="line_h">
+                    <img src="../static/images/product/task/3.png">
+                </div>
+                <div class="line_h">
+                    <div class="line_text">
+                        <p class="l_title">一项任务多人配合<br>方便沟通，高效协作</p>
+                        <p class="l_info">多端协作，无缝配合，有效沟通<br>
+                            自由流转，责任清晰，分工明确<br>
+                            任务关注，掌握进度，多方推动</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="hasBg">
+            <div class="line_model">
+                <div class="line_h">
+                    <div class="line_text">
+                        <p class="l_title">对个人，对任务层层统计<br>
+                            一键导出，方便分析</p>
+                        <p class="l_info">任务协作过程，操作记录完整留存，随时查看<br>
+                            任务状态分类统计，任务优先级分类统计，所<br>
+                            有任务数据一键导出，辅助绩效考评和业绩分析</p>
+                    </div>
+                </div>
+                <div class="line_h">
+                    <img src="../static/images/product/task/4.png">
                 </div>
             </div>
         </div>
